<resources>
    <string name="app_name">KM3Practical</string>
    <string name="qualitativeNanalysisBody">The aim of qualitative analysis is to determine the metallic radicals--- cations, and acidic radicals – anions, present in an unknown substance. The methods of determining these can be stated as follows:\n
1. Preliminary investigation: the physical properties (e.g., appearance,
cations and acidic radicalsanions, present in an unknown substance.
smell, colour) of the substances are noted.\n
2. Identification of metallic radicals: this largely depends on the formation of coloured precipitates (with the exception of ammonia).\n
3. Identification of acidic radicals: this largely depends on the recognition of gases
</string>
    <string name="qualitativeTitle">QUALITATIVE ANALYSIS</string>

    <string name="preliminaryInvest">PRELIMINARY INVESTIGATION</string>
    <string name="preliminaryNote">Physical Properties: The unknown substance should be carefully examined, noting the colour, smell and also whether it is crystalline, amorphous or deliquescent.\n
    Below tables give typical test for some cations. Make sure you take note of what you see.</string>
    <string name="metal_radical">Metallic Radical</string>
    <string name="acidic_radical">Acidic Radical</string>
    <string name="qualitativeTab">Qualitative Analysis</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="forStudent">This App is dedicated to secondary school students taking Chemistry. I hope that through the use of the resources here, you will be able to study for the examination quickly and effectively.</string>
    <string name="acidVol">Vol Of A</string>
    <string name="VolofB">Vol of B(Pipette-25cm3)</string>
    <string name="concOfA">Concentration of A</string>
    <string name="concB">Concentration of B</string>
    <string name="molA">Mole of A</string>
    <string name="molB">Mole of B</string>
    <string name="valueTable"> Generation Of Table Of Value</string>


</resources>
