<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QualitativeAnalysis"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"

            >
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|enterAlways" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary2"
                app:tabGravity="fill"
                app:tabIndicator="@color/colorPrimary"
                app:tabMode="scrollable"
                app:tabTextColor="@color/whiteColor"
                app:tabIndicatorHeight="3dp"

                >

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/introductionPart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="INTRODUCTION"
                    />
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/rulesAndRegulation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" LAB RULES"
                    />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/qualitativeTab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/qualitativeTab"
                    />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/metallicRadical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/metal_radical"


                    />
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/acidicRadical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/acidic_radical"

                    />
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/quantitativePart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="QUANTITATIVE ANALYSIS"
                    />
                <com.google.android.material.tabs.TabItem
                    android:id="@+id/volumetricTab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TITRATION"
                    />




            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.appbar.AppBarLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</RelativeLayout>



    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigate"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_layout"
        app:menu="@menu/my_menu" />




</androidx.drawerlayout.widget.DrawerLayout>

